[gd_scene load_steps=9 format=2]

[ext_resource path="res://Lexical/Dict/dict-background.png" type="Texture" id=1]
[ext_resource path="res://Lexical/Akson/Akson.gd" type="Script" id=2]
[ext_resource path="res://UI/fonts/THSarabunNew.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://UI/pressFtoExit.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/fonts/THSarabunNew BoldItalic.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 160
outline_size = 1
outline_color = Color( 0.137255, 1, 0.952941, 1 )
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 3 )

[node name="Akson" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -29.0
margin_top = -17.0
margin_right = 334.0
margin_bottom = 198.0
color = Color( 0, 0, 0, 0.501961 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -79.5
margin_right = 139.5
margin_bottom = 80.5
mouse_filter = 2
texture = ExtResource( 1 )
expand = true
stretch_mode = 1
flip_h = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PressFToExit" parent="." instance=ExtResource( 4 )]
margin_top = -3.69312
margin_bottom = 18.3069

[node name="Label" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0.545098 )
anchor_left = 0.000881529
anchor_top = -0.00313416
anchor_right = 0.000881577
anchor_bottom = 0.0301992
margin_left = -0.282089
margin_top = 0.564148
margin_right = 319.718
margin_bottom = 174.564
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "อักษร"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vowels" type="Button" parent="."]
margin_left = 50.0
margin_top = 80.0
margin_right = 128.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 2 )
text = "_vowels"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Consonants" type="Button" parent="."]
margin_left = 184.0
margin_top = 80.0
margin_right = 256.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 3 )
text = "_consonants"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Vowels" to="." method="_on_Vowels_mouse_entered"]
[connection signal="pressed" from="Vowels" to="." method="_on_Vowels_pressed"]
[connection signal="pressed" from="Consonants" to="." method="_on_Consonants_pressed"]
